objects/vlocity_cmt__Picklist__c.object
<CustomObject>
    <description>Vlocity Picklists are reusable lists of values used for validating attributes or custom UI pick list controls.</description>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <description>The code name of the Vlocity Picklist. Used to identify the picklist across systems.</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DataType__c</fullName>
        <description>Data type of the values in this picklist: text, number, date, date/time or boolean.</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalGroupKey__c</fullName>
        <description>Represents a common identifier shared by different versions of the same Picklist.</description>
        <label>Version Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalId__c</fullName>
        <description>DEPRECATED</description>
        <label>Global Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Vlocity Picklist. Used to identify the Vlocity Picklist across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique picklist identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED</description>
        <label>Is Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsShared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LifecycleStatus__c</fullName>
        <description>Represents the Lifecycle status of the Picklist. The Draft and Released status are the initial and final lifecycle status of the entity.</description>
        <label>Lifecycle Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Identifies whether the values for this picklist are enumerated, defined by ranges or defined by a query.</description>
        <label>Picklist Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enumerated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UnitOfMeasureName__c</fullName>
        <label>Unit Of Measure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionLabel__c</fullName>
        <description>Represents user-friendly label for the versioned Picklist</description>
        <label>Version Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Picklist</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Picklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__EffectiveFrom_Greater_EffectiveUntil</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__EffectiveFromDate__c  &gt;  vlocity_cmt__EffectiveUntilDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EffectiveUntilDate__c</errorDisplayField>
        <errorMessage>Effective Until Date should be greater than or equal to Effective From Date.</errorMessage>
    </validationRules>
</CustomObject>